# task-cli

./: AGENTS.md  README.md  pyproject.toml
task_cli/: README.md  __init__.py  main.py  render.py  service.py  store.py
tests/: test_cli.py  test_service.py
