[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "task-cli"
version = "0.1.0"
description = "A simple CLI for daily tasks and todos"
requires-python = ">=3.10"
authors = [
  { name = "task-cli" }
]

[project.scripts]
task = "task_cli.main:main"

[tool.setuptools]
packages = ["task_cli"]
